<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.isoParser.IsoParserFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/iso_8583_msg"
        android:textSize="16sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/messageInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:gravity="top"
        android:inputType="textMultiLine"
        android:textDirection="ltr" />

    <Button
        android:id="@+id/parseButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/msgPars" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/yourMsg"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/parsedFieldsText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#F5F5F5"
        android:textIsSelectable="true"
        android:fontFamily="monospace"
        android:padding="16dp"
        android:textDirection="ltr"
        android:textSize="14sp"
        android:visibility="gone" />

</LinearLayout>